force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General Help</fullName>
        <description>Instructional assistance, process help, general questions</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Impacted_Objects__c</fullName>
        <label>Impacted Objects/Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Bird Returns</fullName>
                </value>
                <value>
                    <fullName>Box for Salesforce</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Conservation Farms and Ranches</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Deals</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>Easement/DR Monitoring</fullName>
                </value>
                <value>
                    <fullName>Income/Expense</fullName>
                </value>
                <value>
                    <fullName>NPSP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Project IDs</fullName>
                </value>
                <value>
                    <fullName>Property Management</fullName>
                </value>
                <value>
                    <fullName>Reports/Dashboards</fullName>
                </value>
                <value>
                    <fullName>Soapbox Mailer</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_by_date__c</fullName>
        <inlineHelpText>Put the date you would like the request to be fulfilled by.</inlineHelpText>
        <label>Requested by date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person making request, if different from case creator (or owner).</description>
        <label>Requested by if different from creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>General_Help</fullName>
        <active>true</active>
        <businessProcess>General Help</businessProcess>
        <description>For other requests than the options listed. Other Requests (previously &quot;General Help&quot;) include data imports, data updates, deduplications, error/functionality troubleshooting, field/layout updates, trainings, project ID&apos;s, and other help.</description>
        <label>Other Requests</label>
    </recordTypes>
</CustomObject>